--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Index Page</h1>
+    <p>Welcome {{user}}</p>
+    <p>Your password is {{password}}</p>
     <a href="{{url_for('about')}}">Bo to about page</a>
 </body>
 </html>
