--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Index Page</h1>
-    <p>Welcome {{user}}</p>
-    <p>Your password is {{password}}</p>
-    <a href="{{url_for('about')}}">Bo to about page</a>
+    <h1>All Recipes</h1>
+    
+    <ul>
+        {% for category in categories %}
+            <li><a href="{{url_for('recipe_type', type=category.type)}}">{{category.type}}</a></li>
+        {% endfor %}
+    </ul>
+   
+    {% for recipe in recipes %}
+        <p>{{ recipe.name }}</p>
+    {% endfor %}
+    
+    <form action="{{url_for('search')}}" method="POST">
+        <input type="text" name="query"/>
+        <input type="submit" value="Submit"/>
+    </form>
 </body>
 </html>
